package diploma;

import java.util.ArrayList;
import java.util.List;

import de.fhpotsdam.unfolding.UnfoldingMap;
import de.fhpotsdam.unfolding.data.Feature;
import de.fhpotsdam.unfolding.data.GeoJSONReader;
import de.fhpotsdam.unfolding.data.PointFeature;
import de.fhpotsdam.unfolding.geo.Location;
import de.fhpotsdam.unfolding.marker.AbstractShapeMarker;
import de.fhpotsdam.unfolding.marker.Marker;
import de.fhpotsdam.unfolding.marker.MultiMarker;
import de.fhpotsdam.unfolding.providers.OpenStreetMap;
import de.fhpotsdam.unfolding.utils.MapUtils;
import parsing.ParseFeed;
import processing.core.PApplet;

/** EarthquakeCityMap
 * An application with an interactive map displaying earthquake data.
 * Author: UC San Diego Intermediate Software Development MOOC team
 * @author Sergei Brusentsov
 * Date: 01 02 2024
 * */
public class EarthquakeCityMap extends PApplet {
	
	// We will use member variables, instead of local variables, to store the data
	// that the setup and draw methods will need to access (as well as other methods)
	// You will use many of these variables, but the only one you should need to add
	// code to modify is countryQuakes, where you will store the number of earthquakes
	// per country.
	
	// You can ignore this.  It's to get rid of eclipse warnings
	private static final long serialVersionUID = 1L;

	// IF YOU ARE WORKING OFFILINE, change the value of this variable to true
	private static final boolean offline = true;
	
	/** This is where to find the local tiles, for working without an Internet connection */
	public static String mbTilesString = "blankLight-1-3.mbtiles";
	
	//feed with magnitude 2.5+ Earthquakes
	private String earthquakesURL = "https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.atom";
	
	// The files containing city names and info and country names and info
	private String cityFile = "city-data.json";
	private String countryFile = "countries.geo.json";
	
	// The map
	private UnfoldingMap map;
	
	// Markers for each city
	private List<Marker> cityMarkers;
	// Markers for each earthquake
	private List<Marker> quakeMarkers;

	// A List of country markers
	private List<Marker> countryMarkers;
	
	// NEW IN MODULE 5
	private CommonMarker lastSelected;
	private CommonMarker lastClicked;
	//private Map<Class<? extends CommonMarker>, String> classMap;
	
	public void setup() {		
		// (1) Initializing canvas and map tiles
		size(900, 700, OPENGL);
		if (offline) {
		    map = new UnfoldingMap(this, 200, 50, 650, 600/*, new MBTilesMapProvider(mbTilesString)*/);
		    //earthquakesURL = "2.5_week.atom";
		}
		else {
			map = new UnfoldingMap(this, 200, 50, 650, 600, new OpenStreetMap.OpenStreetMapProvider() );

		}
		MapUtils.createDefaultEventDispatcher(this, map);
		
		//earthquakesURL = "quiz2.atom";
		
		// (2) Reading in earthquake data and geometric properties
	    //     STEP 1: load country features and markers
		List<Feature> countries = GeoJSONReader.loadData(this, countryFile);
		countryMarkers = MapUtils.createSimpleMarkers(countries);
		
		//     STEP 2: read in city data
		List<Feature> cities = GeoJSONReader.loadData(this, cityFile);
		cityMarkers = new ArrayList<Marker>();
		for(Feature city : cities) {
		  cityMarkers.add(new CityMarker(city));
		}
	    
		//     STEP 3: read in earthquake RSS feed
	    List<PointFeature> earthquakes = ParseFeed.parseEarthquake(this, earthquakesURL);
	    quakeMarkers = new ArrayList<Marker>();
	    
	    for(PointFeature feature : earthquakes) {
		  //check if LandQuake
		  if(isLand(feature)) {
		    quakeMarkers.add(new LandQuakeMarker(feature));
		  }
		  // OceanQuakes
		  else {
		    quakeMarkers.add(new OceanQuakeMarker(feature));
		  }
	    }
	    //init reflection for CommonClass
//	    classMap = new HashMap<>();
//	    addSubclassesToMap(classMap, CommonMarker.class);
//	    
	    // could be used for debugging
	    printQuakes();
	 		
	    // (3) Add markers to map
	    //     NOTE: Country markers are not added to the map.  They are used
	    //           for their geometric properties
	    map.addMarkers(quakeMarkers);
	    map.addMarkers(cityMarkers);
	    
	    int numToPrint = 20;
		sortAndPrint(numToPrint );
	    
	}  // End setup
	
	
//	private void addSubclassesToMap(Map<Class<? extends CommonMarker>, String> classMap, Class<CommonMarker> parentClass) {
//		 Package parentPackage = parentClass.getPackage();
//	        String packageName = parentPackage.getName();
//	        Reflections reflections = new Reflections(packageName);
//
//	        // Get all classes that inherit from the parentClass
//	        Set<Class<? extends CommonMarker>> subclasses = reflections.getSubTypesOf(CommonMarker.class);
//
//	        // Add subclasses to the map
//	        for (Class<? extends CommonMarker> subclass : subclasses) {
//	            // You can provide a default description or gather it from annotations, etc.
//	            classMap.put(subclass, "Default Description");
//	        }
//		
//	}


	public void draw() {
		background(0);
		map.draw();
		addKey();
		
	}
	
	//W6 PA
	// TODO: Add the method:
	private void sortAndPrint(int numToPrint) {
		//using stream API
		EarthquakeMarker[] markers =  quakeMarkers.stream()
													.sorted()
													.toArray(EarthquakeMarker[]::new);
				
		//traditional insertion sorting
//		
//		Object[] markers = quakeMarkers.toArray();
//		for (int i = 1; i < markers.length; i++) {
//			int currPosition = i;
//			
//			while (currPosition > 0 && 
//					(((EarthquakeMarker) markers[currPosition]).compareTo(((EarthquakeMarker)markers[currPosition - 1])) < 0)) {
//				swap(markers, currPosition, currPosition - 1);
//				currPosition -= 1;
//			}
//			
//		}
		
		//choice count of items to be printed
		int itemsToOutput = (numToPrint < markers.length) ? numToPrint : markers.length;
		for(int i = 0; i < itemsToOutput; i++) {
			System.out.println(markers[i].toString());
		}
		
		
	}
	//sorting helper method
		private void swap(Object[] markers, int leftValueMin, int rightValueMin) {
			EarthquakeMarker tmp = (EarthquakeMarker) markers[rightValueMin];
			markers[rightValueMin] = markers[leftValueMin];
			markers[leftValueMin] = tmp;
		}
	// and then call that method from setUp
	
	/** Event handler that gets called automatically when the 
	 * mouse moves.
	 */
	@Override
	public void mouseMoved()
	{
		// clear the last selection
		if (lastSelected != null) {
			lastSelected.setSelected(false);
			lastSelected = null;
		
		}
		selectMarkerIfHover(quakeMarkers);
		selectMarkerIfHover(cityMarkers);
	}
	
	// If there is a marker under the cursor, and lastSelected is null 
	// set the lastSelected to be the first marker found under the cursor
	// Make sure you do not select two markers.
	// 
	private void selectMarkerIfHover(List<Marker> markers)
	{
		if (lastSelected != null) return;
		
		if (lastSelected == null) { 
			for (Marker m : markers) {
				CommonMarker marker = (CommonMarker)m;
				if(marker.isInside(this.map, (float)mouseX, (float)mouseY)) {
					System.out.println("Marker: <" + marker.getStringProperty("name") + "> x" + mouseX + " y" + mouseY);
					lastSelected = marker;
					lastSelected.setSelected(true);
					return;
				}
			}
		}
		//if (lastSelected != null) lastSelected.showTitle(g, mouseX, mouseY);
	}
	
	
	
	
	/** The event handler for mouse clicks
	 * It will display an earthquake and its threat circle of cities
	 * Or if a city is clicked, it will display all the earthquakes 
	 * where the city is in the threat circle
	 */
	@SuppressWarnings("unchecked")
	@Override
	public void mouseClicked(){
		if ( lastClicked != null) {
			unhideMarkers();
			lastSelected = lastClicked = null;
			
		} else if (lastClicked == null){
			Marker currentClicked = this.getMarkerUnderClick(cityMarkers);
			lastClicked = ( currentClicked == null) ? (CommonMarker) this.getMarkerUnderClick(quakeMarkers) : (CommonMarker) currentClicked;
			
			if (lastClicked == null) return;
			//checkCitiesForClick();
			lastClicked.setClicked(true);
			hideMarkersOutterRange(lastClicked.getClass());
//			lastClicked.showTitle(this.g, mouseX, mouseY);
		}
	}
	
	
	private void hideMarkersOutterRange(Class<? extends CommonMarker> markerClass) {
			
			if (markerClass.equals(LandQuakeMarker.class) || markerClass.equals(OceanQuakeMarker.class)) {
				//All downcast expressions breaks the SOLID principles!!!
				for (Marker marker : cityMarkers) {
					//Hide all cityMarkers out of bounds of threatCircle
					if (marker.getDistanceTo(lastClicked.getLocation()) < ((EarthquakeMarker) lastClicked)
							.threatCircle()) {
						marker.setHidden(false);
					} else {
						marker.setHidden(true);
					}

				}
				//hide all earthquakes
				for(Marker marker: quakeMarkers) {
					if (marker != lastClicked) {
						marker.setHidden(true);	
					}
				}
			} else {
				for(Marker marker: quakeMarkers) {
					if (marker.getDistanceTo(lastClicked.getLocation()) < ((EarthquakeMarker) marker)
							.threatCircle()) {
						marker.setHidden(false);
					} else {
						marker.setHidden(true);
					}
				}
				//hide all other cities
				for(Marker marker: cityMarkers) {
					if (marker != lastClicked) marker.setHidden(true);
				}
		}
//		for (Marker marker : quakeMarkers) 
//			if (marker.getDistanceTo(lastClicked.getLocation()))
//		}
//		
		
		
	}
	private  Marker getMarkerUnderClick(List<? extends Marker> markers) {
		for (Marker marker : markers) {
			if (marker.isInside(map, mouseX, mouseY) 
					//&& classMap.containsKey(marker.getClass()) //Use reflections to extend all possibilities of DI	too early for java 8...
					&& (marker.getClass() == EarthquakeMarker.class 
					|| marker.getClass() == LandQuakeMarker.class
					|| marker.getClass() == OceanQuakeMarker.class
					|| marker.getClass() == CityMarker.class)
				) return marker;
		}
		return null;
	}
	

	// loop over and unhide all markers
	private void unhideMarkers() {
		for(Marker marker : quakeMarkers) {
			marker.setHidden(false);
		}
			
		for(Marker marker : cityMarkers) {
			marker.setHidden(false);
		}
	}
	
	// helper method to draw key in GUI
	private void addKey() {	
		// Remember you can use Processing's graphics methods here
		fill(255, 250, 240);
		
		int xbase = 25;
		int ybase = 50;
		
		rect(xbase, ybase, 150, 250);
		
		fill(0);
		textAlign(LEFT, CENTER);
		textSize(12);
		text("Earthquake Key", xbase+25, ybase+25);
		
		fill(150, 30, 30);
		int tri_xbase = xbase + 35;
		int tri_ybase = ybase + 50;
		triangle(tri_xbase, tri_ybase-CityMarker.TRI_SIZE, tri_xbase-CityMarker.TRI_SIZE, 
				tri_ybase+CityMarker.TRI_SIZE, tri_xbase+CityMarker.TRI_SIZE, 
				tri_ybase+CityMarker.TRI_SIZE);

		fill(0, 0, 0);
		textAlign(LEFT, CENTER);
		text("City Marker", tri_xbase + 15, tri_ybase);
		
		text("Land Quake", xbase+50, ybase+70);
		text("Ocean Quake", xbase+50, ybase+90);
		text("Size ~ Magnitude", xbase+25, ybase+110);
		
		fill(255, 255, 255);
		ellipse(xbase+35, 
				ybase+70, 
				10, 
				10);
		rect(xbase+35-5, ybase+90-5, 10, 10);
		
		fill(color(255, 255, 0));
		ellipse(xbase+35, ybase+140, 12, 12);
		fill(color(0, 0, 255));
		ellipse(xbase+35, ybase+160, 12, 12);
		fill(color(255, 0, 0));
		ellipse(xbase+35, ybase+180, 12, 12);
		
		textAlign(LEFT, CENTER);
		fill(0, 0, 0);
		text("Shallow", xbase+50, ybase+140);
		text("Intermediate", xbase+50, ybase+160);
		text("Deep", xbase+50, ybase+180);

		text("Past hour", xbase+50, ybase+200);
		
		fill(255, 255, 255);
		int centerx = xbase+35;
		int centery = ybase+200;
		ellipse(centerx, centery, 12, 12);

		strokeWeight(2);
		line(centerx-8, centery-8, centerx+8, centery+8);
		line(centerx-8, centery+8, centerx+8, centery-8);
			
	}

	
	
	// Checks whether this quake occurred on land.  If it did, it sets the 
	// "country" property of its PointFeature to the country where it occurred
	// and returns true.  Notice that the helper method isInCountry will
	// set this "country" property already.  Otherwise it returns false.	
	private boolean isLand(PointFeature earthquake) {
		
		// IMPLEMENT THIS: loop over all countries to check if location is in any of them
		// If it is, add 1 to the entry in countryQuakes corresponding to this country.
		for (Marker country : countryMarkers) {
			if (isInCountry(earthquake, country)) {
				return true;
			}
		}
		
		// not inside any country
		return false;
	}
	
	// prints countries with number of earthquakes
	private void printQuakes() {
		int totalWaterQuakes = quakeMarkers.size();
		for (Marker country : countryMarkers) {
			String countryName = country.getStringProperty("name");
			int numQuakes = 0;
			for (Marker marker : quakeMarkers)
			{
				EarthquakeMarker eqMarker = (EarthquakeMarker)marker;
				if (eqMarker.isOnLand()) {
					if (countryName.equals(eqMarker.getStringProperty("country"))) {
						numQuakes++;
					}
				}
			}
			if (numQuakes > 0) {
				totalWaterQuakes -= numQuakes;
				System.out.println(countryName + ": " + numQuakes);
			}
		}
		System.out.println("OCEAN QUAKES: " + totalWaterQuakes);
	}
	
	
	
	// helper method to test whether a given earthquake is in a given country
	// This will also add the country property to the properties of the earthquake feature if 
	// it's in one of the countries.
	// You should not have to modify this code
	private boolean isInCountry(PointFeature earthquake, Marker country) {
		// getting location of feature
		Location checkLoc = earthquake.getLocation();

		// some countries represented it as MultiMarker
		// looping over SimplePolygonMarkers which make them up to use isInsideByLoc
		if(country.getClass() == MultiMarker.class) {
				
			// looping over markers making up MultiMarker
			for(Marker marker : ((MultiMarker)country).getMarkers()) {
					
				// checking if inside
				if(((AbstractShapeMarker)marker).isInsideByLocation(checkLoc)) {
					earthquake.addProperty("country", country.getProperty("name"));
						
					// return if is inside one
					return true;
				}
			}
		}
			
		// check if inside country represented by SimplePolygonMarker
		else if(((AbstractShapeMarker)country).isInsideByLocation(checkLoc)) {
			earthquake.addProperty("country", country.getProperty("name"));
			
			return true;
		}
		return false;
	}

	public static void main(String[] args) {
		PApplet.main("diploma.EarthquakeCityMap");
	}
}
